fix contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,10 @@ img.newsroom{
 		font-size: 18px;
 	}
 
+	#main-menu li a.active{
+		color: rgb(255, 255, 255);
+	}
+
 	/* Team */
 	header.team p{
 		font-size: 18px;
